<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StandardButtonsFragment">

    <TableLayout
        android:id="@+id/standard_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background">

        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_rotate"
                style="@style/operatorButton"
                android:text="@string/rotate_sign"/>
            <Button
                android:id="@+id/button_left_bracket"
                style="@style/operatorButton"
                android:text="@string/left_bracket_sign" />
            <Button
                android:id="@+id/button_right_bracket"
                style="@style/operatorButton"
                android:text="@string/right_bracket_sign" />
            <Button
                android:id="@+id/button_erase"
                style="@style/eraseButton"
                android:text="@string/erase_sign" />
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_7"
                style="@style/simpleButton"
                android:text="@string/digit_7" />
            <Button
                android:id="@+id/button_8"
                style="@style/simpleButton"
                android:text="@string/digit_8" />
            <Button
                android:id="@+id/button_9"
                style="@style/simpleButton"
                android:text="@string/digit_9" />
            <Button
                android:id="@+id/button_divide"
                style="@style/operatorButton"
                android:text="@string/divide_sign" />
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_4"
                style="@style/simpleButton"
                android:text="@string/digit_4" />
            <Button
                android:id="@+id/button_5"
                style="@style/simpleButton"
                android:text="@string/digit_5" />
            <Button
                android:id="@+id/button_6"
                style="@style/simpleButton"
                android:text="@string/digit_6" />
            <Button
                android:id="@+id/button_multiply"
                style="@style/operatorButton"
                android:text="@string/multiply_sign" />
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_1"
                style="@style/simpleButton"
                android:text="@string/digit_1" />
            <Button
                android:id="@+id/button_2"
                style="@style/simpleButton"
                android:text="@string/digit_2" />
            <Button
                android:id="@+id/button_3"
                style="@style/simpleButton"
                android:text="@string/digit_3"/>
            <Button
                android:id="@+id/button_minus"
                style="@style/operatorButton"
                android:text="@string/minus_sign" />
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_0"
                style="@style/simpleButton"
                android:text="@string/digit_0" />
            <Button
                android:id="@+id/button_dot"
                style="@style/simpleButton"
                android:text="@string/dot" />
            <Button
                android:id="@+id/button_equals"
                style="@style/operatorButton"
                android:text="@string/equals_sign"/>
            <Button
                android:id="@+id/button_plus"
                style="@style/operatorButton"
                android:text="@string/plus_sign" />
        </TableRow>

    </TableLayout>

</FrameLayout>