<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StandardButtonsFragment">

    <TableLayout
        android:id="@+id/scientific_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background">

        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_inv"
                style="@style/scientificButton"
                android:text="@string/invert"/>
            <Button
                android:id="@+id/button_power_minus_1"
                style="@style/scientificButton"
                android:text="@string/power_minus_one" />
            <Button
                android:id="@+id/button_factorial"
                style="@style/scientificButton"
                android:text="@string/factorial_sign" />
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_sin"
                style="@style/scientificButton"
                android:text="@string/sin_function" />
            <Button
                android:id="@+id/button_cos"
                style="@style/scientificButton"
                android:text="@string/cos_function" />

            <Button
                android:id="@+id/button_tan"
                style="@style/scientificButton"
                android:text="@string/tan_function" />
            <!--÷-->
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_ln"
                style="@style/scientificButton"
                android:text="@string/ln_function" />
            <Button
                android:id="@+id/button_log"
                style="@style/scientificButton"
                android:text="@string/log_function" />
            <Button
                android:id="@+id/button_sqrt"
                style="@style/scientificButton"
                android:text="@string/sqrt_function" />
            <!--×-->
        </TableRow>
        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/button_pi"
                style="@style/scientificButton"
                android:text="@string/pi_sign" />
            <Button
                android:id="@+id/button_e"
                style="@style/scientificButton"
                android:text="@string/exp_sign" />
            <Button
                android:id="@+id/button_power"
                style="@style/scientificButton"
                android:text="@string/power_sign"/>
        </TableRow>

    </TableLayout>

</FrameLayout>